--- a/index.html
+++ b/index.html
@@ -15,93 +15,93 @@
                 <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">          
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="">
+                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
             </div>
         </div>
     </main>
     <!-- footer -->
     <footer>
-      <div>
+      
         <i class="fa-solid fa-microphone"></i>
-      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, maiores. Possimus, vitae expedita veniam id quaerat aliquid iste distinctio reprehenderit saepe ratione animi sunt nihil, consectetur perspiciatis. Hic, sit nulla.</p>
       <div></div>
       <div></div>
     </footer>
