--- a/index.html
+++ b/index.html
@@ -12,98 +12,322 @@
     <main>
           <div class="container d-flex">
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">          
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
             <div class="box">
-                <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
             </div>
+            <div class="item-up">
+                <i class="fa-solid fa-table-cells"></i>
+                <span>Speaker View</span>
+            </div>
+            <div class="exit">
+                <i class="fa-solid fa-xmark"></i>
+            <div>
         </div>
     </main>
     <!-- footer -->
     <footer>
-      
-        <i class="fa-solid fa-microphone"></i>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, maiores. Possimus, vitae expedita veniam id quaerat aliquid iste distinctio reprehenderit saepe ratione animi sunt nihil, consectetur perspiciatis. Hic, sit nulla.</p>
-      <div></div>
-      <div></div>
+        <div class="f-flex">
+           <div class="item-start f-star" >
+            <div>
+                <i class="fa-solid fa-microphone"></i>
+                <i class="fa-solid fa-chevron-up"></i>
+                <h6>Mute</h6>
+            </div>
+            <div>
+                <i class="fa-solid fa-video"></i>
+                <i class="fa-solid fa-chevron-up"></i>
+                <h6>Stop Video</h6>
+            </div>
+              </div>
+            <div class="item-center f-center">
+            <div>
+                <i class="fa-solid fa-user-plus"></i>
+                <h6>Invite</h6>
+            </div>
+            <div class="center">
+                <i class="fa-solid fa-user-group"></i>
+                <h6>Manage Partecipants</h6>
+            </div>
+            <div>   
+                <i class="fa-solid fa-chart-column"></i>
+                <h6>Polling</h6>
+            </div>
+            <div>  
+                <i class="fa-solid fa-share-from-square"></i>
+                <i class="fa-solid fa-chevron-up"></i>
+                <h6>Share Screen</h6>
+            </div>
+            <div>                
+                <i class="fa-solid fa-comment"></i>
+                <h6>Chat</h6>
+            </div>    
+            <div>
+                <i class="fa-solid fa-record-vinyl"></i>
+                <h6>Record</h6>
+            </div>   
+            <div class="center">
+                <i class="fa-solid fa-table-cells-large"></i>
+                <h6>Breakout Rooms</h6>
+            </div>
+            <div>    
+                <i class="fa-solid fa-ellipsis"></i>
+                <h6>More</h6>
+            </div>    
+            </div>
+            <div class="meeting">
+                <h5>
+                    End Meeting
+                </h5>
+            </div>      
+       </div>
     </footer>
 </body>
 </html>
