--- a/index.html
+++ b/index.html
@@ -263,6 +263,69 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
             <div class="item-up">
                 <i class="fa-solid fa-table-cells"></i>
                 <span>Speaker View</span>
