--- a/index.html
+++ b/index.html
@@ -12,33 +12,40 @@
     <main>
           <div class="container d-flex">
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
                 <div class="pinco-pallo">
                     <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
+                </div>
                 </div>
             </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
                 <div class="pinco-pallo">
                     <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
+                </div>
                 </div>
             </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
                 <div class="pinco-pallo">
                     <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
+                </div>
                 </div>
             </div>
-            <div class="box">          
+            <div class="box">         
+                <div class="card-box"> 
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -46,17 +53,98 @@
                     <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
                 </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
                 </div>
             </div>
             <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -65,7 +153,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div> 
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -74,7 +164,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -83,7 +175,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -92,7 +186,20 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -101,7 +208,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -110,7 +219,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -119,7 +230,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+            <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -128,7 +241,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -137,7 +252,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -146,7 +263,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -155,7 +274,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -164,7 +285,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -173,7 +296,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -182,7 +307,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -191,7 +318,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -200,7 +329,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -209,7 +340,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+           </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -218,7 +351,20 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
+                <div class="card"> 
+                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
+                </div>
+                <div class="pinco-pallo">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -227,7 +373,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
+            </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -236,16 +384,9 @@
                     <span>Pinco Pallo</span>
                 </div>
             </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
             </div>
             <div class="box">
+                <div class="card-box">
                 <div class="card"> 
                     <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
                 </div>
@@ -253,77 +394,6 @@
                     <i class="fa-solid fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
                 </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
-                </div>
-            </div>
-            <div class="box">
-                <div class="card"> 
-                    <img src="https://picsum.photos/id/0/5000/3333" alt="pic">
-                </div>
-                <div class="pinco-pallo">
-                    <i class="fa-solid fa-microphone-slash"></i>
-                    <span>Pinco Pallo</span>
                 </div>
             </div>
             <div class="item-up">
@@ -341,8 +411,10 @@
            <div class="item-start f-star" >
             <div>
                 <i class="fa-solid fa-microphone"></i>
-                <i class="fa-solid fa-chevron-up"></i>
                 <h6>Mute</h6>
+            </div>
+            <div>
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
             <div>
                 <i class="fa-solid fa-video"></i>
@@ -363,7 +435,7 @@
                 <i class="fa-solid fa-chart-column"></i>
                 <h6>Polling</h6>
             </div>
-            <div>  
+            <div class="center">  
                 <i class="fa-solid fa-share-from-square"></i>
                 <i class="fa-solid fa-chevron-up"></i>
                 <h6>Share Screen</h6>
